--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Lato|Lobster&amp;subset=latin-ext" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles.min.css">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato|Lobster&amp;subset=latin-ext"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+      integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/styles.min.css" />
     <title>Virtua Frontend Internship Test</title>
   </head>
   <body>
@@ -15,7 +23,35 @@
       <!-- Display success message below -->
     </section>
     <div class="popup">
-      <!-- Here goes your popup form HTML code -->
+      <h3 class="popup-title">Login</h3>
+      <div class="popup-escape"><i class="fas fa-times-circle"></i></div>
+      <form method="POST" class="popup__form">
+        <input
+          type="email"
+          name="email"
+          id="email"
+          class="form-text"
+          placeholder="E-mail"
+        />
+        <input
+          type="password"
+          name="password"
+          id="password"
+          placeholder="Password"
+          class="form-text"
+        />
+        <div class="form-box">
+          <input
+            type="checkbox"
+            name="agree"
+            id="agree"
+            class="form-checkox"
+          /><label for="agree" class="form-checkox-label"
+            >I agree to terms & conditions.</label
+          >
+        </div>
+        <button type="submit" class="form-button">submit</button>
+      </form>
     </div>
     <script src="js/index.min.js" charset="utf-8"></script>
   </body>
