complete third task

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
   <body>
     <section class="main">
       <button id="show-popup-form" class="btn btn-main">Click me!</button>
-      <!-- Display success message below -->
+      <h2 class="thank-message">Thank you!</h2>
     </section>
     <div class="popup">
       <h3 class="popup-title">Login</h3>
